[tool.poetry]
name = "cmsb2b"
version = "0.1.0"
description = ""
authors = ["chamba <urgosxd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "^6.1.1"
django = "^5.0.6"
dj-database-url = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
